force-app/main/default/objects/Account/fields/AccountBalance__c.field-meta.xml
<CustomField>
    <fullName>AccountBalance__c</fullName>
    <label>Account Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>