force-app/main/default/objects/Account/fields/AccountHolder1__c.field-meta.xml
<CustomField>
    <fullName>AccountHolder1__c</fullName>
    <description>First Name on the Account</description>
    <label>Account Holder 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>