force-app/main/default/objects/Account/fields/AccountHolder2__c.field-meta.xml
<CustomField>
    <fullName>AccountHolder2__c</fullName>
    <description>Second Name on the Account</description>
    <label>Account Holder 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>