force-app/main/default/objects/Account/fields/CardNumber__c.field-meta.xml
<CustomField>
    <fullName>CardNumber__c</fullName>
    <label>Card Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>