force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Good Standing</fullName>
                <default>true</default>
                <label>In Good Standing</label>
            </value>
            <value>
                <fullName>Overdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>